--- a/public/style.css
+++ b/public/style.css
@@ -1,182 +1,74 @@
 * {
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
 }
 
-body {
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	height: 100vh;
+.toppart {
 	display: flex;
 	justify-content: center;
-}
-
-.app {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	max-width: 600px;
-	background: #fff;
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-.app > .screen {
-	display: none;
-}
-
-.app > .screen.active {
-	display: block;
-	width: 100%;
-	height: 100%;
-}
-
-.screen .form {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 80%;
-	max-width: 400px;
-}
-
-.screen .form-input {
-	width: 100%;
-	margin: 20px;;
-}
-
-.screen h2 {
-	margin-bottom: 20px;
-	font-size: 30px;
-	color: #114;
-	border-bottom: 4px solid #555;
-	padding: 5px;
-	display: inline-block;
-}
-
-.screen .form-input label {
-	display: block;
-	margin-bottom: 5px;
-}
-
-.screen .form-input input {
-	width: 100%;
-	padding: 10px;
-	border: 1px solid #555;
-	font-size: 16px;
-}
-
-.screen .form-input button {
-	padding: 10px 20px;
-	background: #111;
-	color: #eee;
-	font-size: 16px;
-	cursor: pointer;
-	outline: none;
-	border: none;
-}
-
-.chat-screen .header {
-	background: #111;
-	height: 50px;
-	display: flex;
-	justify-content: space-between;
 	align-items: center;
-	padding: 0px 20px;
+	height: 80vh;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	background-color: coral;
+	color: white;
 }
 
-.chat-screen .header .logo {
-	font-size: 18px;
-	color: #eee;
-	font-weight: 600;
-}
-
-.chat-screen .header button {
-	padding: 5px 10px;
-	border: 1px solid #eee;
-	background: transparent;
-	color: #eee;
-	font-size: 15px;
-	cursor: pointer;
-	outline: none;
-}
-
-.chat-screen .messages {
-	width: 100%;
-	height: calc(100% - 100px);
-	background: #f5f5f5;
-	overflow: auto;
-}
-
-.chat-screen .messages .message {
+.links {
 	display: flex;
-	padding: 10px;
+	justify-content: center;
+	align-items: center;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.chat-screen .messages .message > div {
-	max-width: 80%;
-	background: #fff;
-	box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.05);
-	padding: 10px;
+h1 {
+	font-size: 5rem;
 }
 
-.chat-screen .messages .message.my-message {
-	justify-content: flex-end;
+p {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 25px;
 }
 
-.chat-screen .messages .message.other-message {
-	justify-content: flex-start;
+a {
+	font-size: 2rem;
 }
 
-.chat-screen .messages .message .name {
-	font-size: 13px;
-	color: #555;
-	margin-bottom: 5px;
+.row {
+	display: grid;
+	grid-template-columns: auto auto auto;
 }
 
-.chat-screen .messages .message .text {
-	word-wrap: break-word;
+@media only screen and (max-width: 768px) {
+	.row {
+		display: grid;
+		grid-template-columns: auto auto;
+		margin: 25px 10px 25px 10px;
+	}
 }
 
-.chat-screen .messages .update {
+@media only screen and (max-width: 425px) {
+	.hashtag {
+		font-size: 15px;
+	}
+}
+
+.row>div {
 	text-align: center;
-	padding: 10px;
-	font-style: italic;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.chat-screen .typebox {
-	width:100%;
-	height: 50px;
-	display: flex;
+#recovered {
+	color: green;
 }
 
-.chat-screen .typebox input { 
-	flex: 1;
-	height: 50px;
-	font-size: 18px;
+#activecases {
+	color: crimson
 }
 
-.chat-screen .typebox button {
-	width: 80px;
-	height: 100%;
-	background: #111;
-	color: #eee;
-	font-size: 16px;
-	outline: none;
-	border: none;
-	cursor: pointer;
+.tabledata {
+	background-color: #FFAAFF;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
