--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@
 	box-sizing: border-box;
 }
 
+/* initial style */
 .toppart {
 	display: flex;
 	justify-content: center;
@@ -30,16 +31,16 @@ p {
 	justify-content: center;
 	align-items: center;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	font-size: 25px;
+	font-size: 20px;
 }
 
-a {
-	font-size: 2rem;
-}
-
-.row {
+.row1 {
 	display: grid;
 	grid-template-columns: auto auto auto;
+}
+
+.footnote {
+	text-align: center;
 }
 
 @media only screen and (max-width: 768px) {
@@ -71,4 +72,143 @@ a {
 
 .tabledata {
 	background-color: #FFAAFF;
+}
+
+/* index page */
+.logo {
+	height: 50px;
+}
+
+.navbar-header {
+	float: left;
+}
+.navbar-nav {
+	float: right;
+}
+
+.container {
+	max-width: 960px;
+	margin: auto;
+	overflow: hidden;
+	padding: 0 3rem;
+}
+
+.canvas {
+	height: 100vh;
+	position: relative;
+	background: rgba(60, 61, 61, 0.75);
+	/* background-image: url('/images/landingimg1.jpg'); */
+}
+
+.canvas:before {
+	content: '';
+	background-image: url('/images/landingimg1.jpg');
+	background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+}
+
+.canvas .canvas-inner {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	height: 100%;
+}
+
+.canvas h1 {
+		font-size: 4rem;
+		color: whitesmoke;
+}
+
+.canvas p {
+	font-size: 1.3rem;
+	color: orange;
+}
+
+.footer {
+	height: 30vh;
+	position: relative;
+	background-color: black;
+}
+
+.icon {
+	float: right;
+	display: none;
+}
+
+.mobile-container {
+	display: none;
+}
+
+@media only screen and (max-width: 425px) {
+	.navbar-default {
+		display: none;
+	}
+
+	.navbar-right {
+		display: none;
+	}
+
+	.icon {
+		display: block;
+	}
+
+	.mobile-container {
+		max-width: 425px;
+		margin: auto;
+		background-color: #555;
+		/* height: 500px; */
+		color: white;
+		border-radius: 10px;
+		display: block;
+	}
+	
+	.topnav {
+		overflow: hidden;
+		background-color: #333;
+		position: relative;
+	}
+	
+	.topnav #myLinks {
+		display: none;
+	}
+	
+	.topnav a {
+		color: white;
+		padding: 14px 16px;
+		text-decoration: none;
+		font-size: 17px;
+		display: block;
+	}
+
+	.pages {
+		text-align: right;
+	}
+	
+	.topnav a.icon {
+		background: black;
+		font-size: 35px;
+		display: block;
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	
+	.topnav a:hover {
+		background-color: #ddd;
+		color: black;
+	}
+	
+	.active {
+		background-color:#F8F8F8;
+		color: white;
+	}
 }
