--- a/public/style.css
+++ b/public/style.css
@@ -45,7 +45,9 @@ p {
 .welcomebanner {
 	position: relative;
 	top: 80px;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	/* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+	font-family: 'Tourney', cursive;
+	/* font-family: 'Lobster', cursive; */
 }
 
 /* bloom */
@@ -115,7 +117,9 @@ p {
 
 	.welcomebanner {
 		top: 0px;
-		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		/* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+		font-family: 'Tourney', cursive;
+		/* font-family: 'Lobster', cursive; */
 	}
 }
 
@@ -215,11 +219,20 @@ p {
 	color: orange;
 }
 
+/* covid update section */
+
+/* covid update section */
+
 .footer {
 	height: 40vh;
 	position: relative;
-	background-color: black;
+	background-color: rgb(43, 41, 41);
 	text-align: center;
+	background-image: url('./images/footerbg.jpg');
+	background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+	/* position: absolute; */
 }
 
 .footer-row {
@@ -236,16 +249,42 @@ p {
 
 .footer-column {
 	display: block;
-	margin-bottom: 10px;
+	/* margin-bottom: 10px; */
 	float: left;
 	padding: 10px;
 	box-sizing: border-box;
-	width: 30%;
-	margin-right: 5%;
+	width: 35%;
+	/* margin-right: 5%; */
 }
 
 .litrato {
-	width: 350px;
+	width: 55%;
+	border-radius: 50%;
+}
+
+blockquote {
+	color: orange;
+}
+
+@media screen and (max-width: 768px) {
+	.footer-column {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 425px) {
+	.footer {
+		height: 75vh;
+	}
+
+	.footer-row {
+		display: block;
+	}
+
+	.footer-column {
+		margin-top: 25px;
+		width: 100%;
+	}
 }
 
 .icon {
